update: 类加载器相关笔记；多线程锁相关笔记